--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="bg-primary-500 text-white sm:text-lg font-semibold px-4 py-2 rounded-md hover:bg-primary-400 focus:ring focus:ring-primary-500 focus:ring-offset-2 focus:bg-primary-500 focus:outline-none transition">Contribute <i class="fas fa-long-arrow-alt-right fa-sm align-baseline"></i></button>
                 </main>
                 <aside class="xl:mr-auto">
-                    <div id="info-wrapper" class="flex flex-col justify-evenly my-10 bg-secondary-100 divide-y divide-primary-200 max-w-2xl">
+                    <div id="info-wrapper" class="flex flex-col justify-evenly my-10 bg-secondary-100 divide-y divide-primary-200 max-w-3xl">
                         <div id="info-card" class="space-y-6 p-4 sm:p-8">
                             <h1 id="info-title" class="text-xl font-bold">GitHub</h1>
                             <h3 id="info-subtitle">Everything is available in public git repositories.</h3>
@@ -78,6 +78,17 @@
                         </div>
                     </div>
                     <!-- #components -->
+                    <!-- #gradients -->
+                    <div id="repo-card" class="space-y-6 bg-white border border-secondary-300 rounded-lg shadow-xl overflow-hidden">
+                        <div id="repo-img" class="border-b border-secondary-300">
+                            <img src="img/PiLOTgradients.svg" alt="Pilot gradients" class="h-16" />
+                        </div>
+                        <div id="repo-content" class="px-4 pb-4 space-y-6">
+                            <p id="repo-subtitle">Discover popular gradients or generate your own.</p>
+                            <p id="repo-status" class="text-primary-500 text-xs tracking-wider px-2 py-1 border border-primary-500 rounded-full inline-block">In Development</p>
+                        </div>
+                    </div>
+                    <!-- #gradients -->
                 </div>
             </section>
             <!-- #repos -->
